[package]
name = "ememoh"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
pollster = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }
wgpu = "0.20.1"
winit = "0.30.3"
anyhow = "1.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

